fix text vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ ul li{
     vertical-align: middle;
 }
 
+.textfix{
+    vertical-align: middle;
+}
+
 /* tag color */
 .q1goals{
     background-color: #9c72e4;
